--- a/src/index.html
+++ b/src/index.html
@@ -10,6 +10,11 @@
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <link rel="manifest" href="manifest.webmanifest">
   <meta name="theme-color" content="#1976d2">
+  <meta property="og:title" content="إجتماع يوحنا ذهبي الفم - السامري الصالح">
+  <meta property="og:description" content="'موقع حجز المؤتمرات'">
+  <meta property="og:image" content="../src/assets/images/logo.jpg">
+  <meta property="og:url" content="https://conferences-reservation.web.app/">
+  <meta property="og:type" content="website">
 </head>
 <body>
   <app-root></app-root>
