--- a/src/index.html
+++ b/src/index.html
@@ -11,7 +11,7 @@
   <link rel="manifest" href="manifest.webmanifest">
   <meta name="theme-color" content="#1976d2">
   <meta property="og:title" content="إجتماع يوحنا ذهبي الفم - السامري الصالح">
-  <meta property="og:description" content="'موقع حجز المؤتمرات'">
+  <meta property="og:description" content="موقع حجز المؤتمرات">
   <meta property="og:image" content="https://firebasestorage.googleapis.com/v0/b/conferences-reservation.appspot.com/o/logo.jpg?alt=media">
   <meta property="og:url" content="https://conferences-reservation.web.app/">
   <meta property="og:type" content="website">
